Add citation css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title"> Hey choom </h1>
+    <h1 class="title"> Hey choom </h1>
+    <p class="citation"> 
+        <cite> Best project so far... and more</cite>
+    </p>
 </body>
 </html>
