--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <p class="citation"> 
         <cite> Best project so far... and more</cite>
     </p>
+    <main>
+        <h2>Description</h2>
+        <p>slmsdkmlskdsdkmlskd</p>
+    </main>
 </body>
 </html>
