Add a link home to contact page

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <h2>Description</h2>
         <p>slmsdkmlskdsdkmlskd</p>
     </main>
+    <a href="contact.php">contact</a>
 </body>
 </html>
